Minor: Fixes newInstance() invocation, upgrades Copyright Year to 2022